# kotlin-c-interop-talk

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
greeter/: CMakeLists.txt  Makefile  README.md  build.gradle.kts
greeter-jni/: CMakeLists.txt  Makefile  README.md  build.gradle.kts
greeter-jni/include/: greeter_jni.h  greeter_jni.h.in
greeter-jni/src/: greeter_jni.c
greeter-jni/src/main/cpp/: GreeterJni.cpp
greeter-jni/src/main/public/: GreeterJni.h
greeter-klib/: build.gradle.kts
greeter-klib/src/jvmMain/kotlin/io/mattmoore/kotlin/playground/cinterop/: Greeter.kt
greeter-klib/src/nativeInterop/cinterop/: interop.def
greeter/include/: Greeter.h  greeter.h  greeter.h.in
greeter/src/: Greeter.cpp  greeter.c  main.c
greeter/src/main/cpp/: Greeter.cpp
greeter/src/main/public/: Greeter.h
greeter_jni/: build.gradle.kts
greeter_jni/include/: GreeterJni.h
greeter_jni/src/: GreeterJni.cpp
jni/: Greeter.kt  Hello.kt  Main.kt  Makefile  README.md  hello.c  main.c
jvm-app/: build.gradle.kts
lib/: build.gradle.kts
lib/src/main/kotlin/io/mattmoore/kotlin/playground/cinterop/: Library.kt
lib/src/test/kotlin/io/mattmoore/kotlin/playground/cinterop/: LibraryTest.kt
libgreeter/: Makefile  greeter.c
libgreeter_jni/: Makefile  greeter_jni.c  greeter_jni.h
libhello/: Makefile  README.md  hello.c  hello.h
libhello_jni/: Makefile  hello_jni.c
native/: Main.kt  Makefile  libhello-shared.def  libhello-static.def  libhello.def  main.c
native-app/: README.md
src/jvmMain/kotlin/: Greeter.kt  Main.kt
src/main/kotlin/: Main.kt
src/nativeInterop/cinterop/: interop.def
